# glogg

./: .gitignore  .travis.yml  AppImageBuilder.yml  CMakeLists.txt  README.md  appveyor.yml  glogg-io.desktop  glogg-io.pro  glogg.pro  glogg.qrc  latest.json  osx_installer.json  release-osx.sh
.github/workflows/: appimage.yml  build-cmake.yml  ci-build.yml  codeql-analysis.yml
packaging/linux/: klogg-io.desktop
packaging/osx/: dmg_setup.scpt
packaging/windows/: 7z_klogg_listfile.txt  klogg-io.nsi  klogg.nsi  prepare_release.cmd
packaging/windows/chocolatey/: klogg-io.nuspec
scripts/osx/: prepare_bundle.sh
scripts/win/: 7z_klogg_io_listfile.txt  7z_pdb_listfile.txt  prepare_release.cmd
src/: abstractlogview.cpp  cmdbutton.cpp  cmdbutton.h  crawlerwidget.cpp  crawlerwidget.h  logmainview.cpp  logmainview.h  main.cpp  mainwindow.cpp  mainwindow.h  savedcommands.h  savedsearches.h  savedstrings.cpp  savedstrings.h  serialportsettings.h  session.cpp  session.h  sessioninfo.cpp  sessioninfo.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  viewinterface.h
src/app/: CMakeLists.txt  klogg.qrc  kloggapp.h  main.cpp  messagereceiver.h
src/data/: filelogdata.cpp  filelogdata.h  ilogdata.h  logdata.cpp  logdata.h  logdataworkerthread.cpp  logfiltereddata.cpp  logfiltereddata.h  logfiltereddataworkerthread.cpp  logfiltereddataworkerthread.h  seriallogdata.cpp  seriallogdata.h  ttylogdata.cpp  ttylogdata.h
src/logdata/: CMakeLists.txt
src/logdata/include/: iodevicesettings.h  iodevicesettings_deserialize.h  serialportsettings.h
src/logdata/include/data/: iodevicelogdata.h  logdata.h  logdatabase.h  logfiltereddata.h  logfiltereddataworker.h  serialportlogdata.h
src/logdata/src/: iodevicelogdata.cpp  logdata.cpp  logfiltereddata.cpp  logfiltereddataworker.cpp  serialportlogdata.cpp
src/ui/: CMakeLists.txt
src/ui/include/: crawlerwidget.h  logmainview.h  mainwindow.h  recentfiles.h  savedcommands.h  savedstrings.h  serialsettingsdialog.h  session.h  viewinterface.h
src/ui/src/: cmdbutton.cpp  crawlerwidget.cpp  logmainview.cpp  mainwindow.cpp  recentfiles.cpp  savedcommands.cpp  savedstrings.cpp  serialsettingsdialog.cpp  serialsettingsdialog.ui  session.cpp  tabbedcrawlerwidget.cpp
src/utils/src/: persistentinfo.cpp
src/versioncheck/src/: versionchecker.cpp
tests/: CMakeLists.txt  crawlerwidget_test.cpp
